[project]
name = "nlp-tutorials"
version = "0.1.0"
description = ""
authors = [
    {name = "Andjela",email = "a.radojevic01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
