[project]
name = "nlp-tutorials"
version = "0.1.0"
description = ""
authors = [
    {name = "Andjela",email = "a.radojevic01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "streamlit (>=1.43.1,<2.0.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "pymilvus (>=2.5.5,<3.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "seqeval (>=1.2.2,<2.0.0)",
    "git-lfs (>=1.6,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
